src/test/deca/context/invalid/pierre/objects/newNotClass.deca
class A {
    void test() {
        int i = new int();
    }
}
{}